Update github actions

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -37,28 +37,28 @@ jobs:
           push: true
           tags: ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }},${{ env.DOCKER_IMAGE_URI }}:latest
 
-  deploy:
-    name: Deploy staging 🚀
-    needs: build-staging-image
-    runs-on: ubuntu-latest
-
-    env:
-      GITHUB_REF: ${{ github.ref }}
-      DOCKER_REGISTRY: ghcr.io
-      DOCKER_IMAGE: luca-bruegger/frienradar-backend
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Creating envs
-        run: |
-          echo "IMAGE_TAG=sha-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-          echo "DOCKER_IMAGE_URI=${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}" >> $GITHUB_ENV
-
-      - name: Redeploy Portainer stack
-        uses: wirgen/portainer-stack-redeploy-action@v1.1
-        with:
-          portainerUrl: ${{ secrets.PORTAINER_HOST }}
-          accessToken: ${{ secrets.PORTAINER_ACCESS_TOKEN }}
-          stackId: 4
-          endpointId: 1
+#  deploy:
+#    name: Deploy staging 🚀
+#    needs: build-staging-image
+#    runs-on: ubuntu-latest
+#
+#    env:
+#      GITHUB_REF: ${{ github.ref }}
+#      DOCKER_REGISTRY: ghcr.io
+#      DOCKER_IMAGE: luca-bruegger/frienradar-backend
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Creating envs
+#        run: |
+#          echo "IMAGE_TAG=sha-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+#          echo "DOCKER_IMAGE_URI=${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}" >> $GITHUB_ENV
+#
+#      - name: Redeploy Portainer stack
+#        uses: wirgen/portainer-stack-redeploy-action@v1.1
+#        with:
+#          portainerUrl: ${{ secrets.PORTAINER_HOST }}
+#          accessToken: ${{ secrets.PORTAINER_ACCESS_TOKEN }}
+#          stackId: 5
+#          endpointId: 1
