--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -19,16 +19,17 @@ services:
 
   app-staging:
     container_name: app-staging
-    build: .
+    image: ghcr.io/luca-bruegger/frienradar-backend:latest
     stdin_open: true
     tty: true
-    command: bash -c "rm -f tmp/pids/server.pid && RAILS_ENV=staging && bundle exec rails s -p 3001 -b '0.0.0.0' -e staging"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b '0.0.0.0' -e staging"
     volumes:
       - .:/myapp
     ports:
       - "3001:3001"
     depends_on:
       - postgres
+      - redis
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.app-staging.rule=Host(`staging.api.frienradar.com`)"
