--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -24,7 +24,7 @@ services:
     tty: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b '0.0.0.0' -e staging"
     volumes:
-      - .:/myapp
+      - myapp:/myapp
     ports:
       - "3001:3001"
     depends_on:
@@ -41,6 +41,7 @@ services:
 volumes:
   redis:
   postgres:
+  myapp:
 
 networks:
     default:
