--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -17,9 +17,11 @@ services:
     ports:
       - "6379:6379"
 
-  app-staging:
-    container_name: app-staging
-    build: .
+  app-dev:
+    container_name: app-dev
+    build:
+      context: ./docker/development
+      dockerfile: Dockerfile
     stdin_open: true
     tty: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
