--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Build docker image and push
         uses: docker/build-push-action@v4
         with:
-          context: ./docker/development
+          context: .
+          file: ./docker/staging/Dockerfile
           push: true
           tags: ${{ env.DOCKER_IMAGE_URI }}:${{ env.IMAGE_TAG }},${{ env.DOCKER_IMAGE_URI }}:latest
 
