--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -20,13 +20,13 @@ services:
   app-dev:
     container_name: app-dev
     build:
-      context: ./docker/development
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/development/Dockerfile
     stdin_open: true
     tty: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/myapp
+      - myapp:/myapp
     ports:
       - "3000:3000"
     depends_on:
@@ -36,3 +36,4 @@ services:
 volumes:
   redis:
   postgres:
+  myapp:
