--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 
 # Ignore important credentials
 .env
+
+/config/credentials/development.key
+/config/credentials/staging.key
+/config/credentials/production.key
