--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -32,6 +32,9 @@ services:
     depends_on:
       - postgres
       - redis
+    environment:
+      - RAILS_MASTER_KEY=1558120081078cc63f9a1a343d518894
+      - FRIENRADAR_DATABASE_STAGING_PASSWORD=password
 
 volumes:
   redis:
