--- a/docker/staging/Dockerfile
+++ b/docker/staging/Dockerfile
@@ -16,7 +16,7 @@ RUN mkdir /seed && chmod 777 /seed
 RUN mkdir /home/app && chmod 777 /home/app
 ENV HOME=/home/app
 
-COPY docker/staging/entrypoint.sh /usr/bin/
+COPY docker/entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
 
