--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -4,7 +4,8 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: $FRIENRADAR_DATABASE_STAGING_USER
+      POSTGRES_PASSWORD: $FRIENRADAR_DATABASE_STAGING_PASSWORD
     ports:
       - "5432:5432"
     restart: always
@@ -40,6 +41,7 @@ services:
     environment:
       - RAILS_MASTER_KEY=$RAILS_MASTER_KEY
       - FRIENRADAR_DATABASE_STAGING_PASSWORD=$FRIENRADAR_DATABASE_STAGING_PASSWORD
+      - FRIENRADAR_DATABASE_STAGING_USER=$FRIENRADAR_DATABASE_STAGING_USER
 
 volumes:
   redis:
