--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -20,14 +20,15 @@ services:
 
   app-dev:
     container_name: app-dev
-    build:
-      context: .
-      dockerfile: docker/development/Dockerfile
+#    build:
+#      context: .
+#      dockerfile: docker/development/Dockerfile
+    image: testimage:latest
     stdin_open: true
     tty: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - myapp:/myapp
+      - .:/myapp
     ports:
       - "3000:3000"
     depends_on:
@@ -39,4 +40,3 @@ services:
 volumes:
   redis:
   postgres:
-  myapp:
