--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -25,7 +25,7 @@ services:
     tty: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b '0.0.0.0' -e staging"
     volumes:
-      - myapp:/myapp
+      - .:/myapp
     ports:
       - "3001:3001"
     depends_on:
@@ -46,7 +46,6 @@ services:
 volumes:
   redis:
   postgres:
-  myapp:
 
 networks:
     default:
