--- a/docker/staging/Dockerfile
+++ b/docker/staging/Dockerfile
@@ -1,23 +1,18 @@
 FROM ruby:3.0.0
 
-USER root
-
 ENV RAILS_ENV=staging
-ENV BUNDLE_PATH=/opt/bundle
+
+RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 
 WORKDIR /myapp
-COPY . /myapp
+COPY Gemfile /myapp/Gemfile
+COPY Gemfile.lock /myapp/Gemfile.lock
+RUN bundle install
 
-RUN apt-get update
-RUN apt-get install direnv -y
-
-RUN mkdir /opt/bundle && chmod 777 /opt/bundle
-RUN mkdir /seed && chmod 777 /seed
-RUN mkdir /home/app && chmod 777 /home/app
-ENV HOME=/home/app
-
+# Add a script to be executed every time the container starts.
 COPY docker/entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
+EXPOSE 3001
 
 CMD [ "rails", "server", "-e", "'staging'", "-b", "0.0.0.0", "-p", "3001" ]
