--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -20,17 +20,16 @@ services:
 
   app-dev:
     container_name: app-dev
-#    build:
-#      context: .
-#      dockerfile: docker/development/Dockerfile
-    image: testimage:latest
+    build:
+      context: .
+      dockerfile: docker/development/Dockerfile
     stdin_open: true
     tty: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
     ports:
-      - "3000:3000"
+      - "3001:3001"
     depends_on:
       - postgres
       - redis
