--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -27,7 +27,7 @@ services:
     tty: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/myapp
+      - myapp:/myapp
     ports:
       - "3001:3001"
     depends_on:
@@ -39,3 +39,4 @@ services:
 volumes:
   redis:
   postgres:
+  myapp:
