--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -37,6 +37,10 @@ services:
       - "traefik.http.services.app-staging.loadbalancer.server.port=3001"
       - "traefik.http.routers.app-staging.service=app-staging"
       - "traefik.http.routers.app-staging.tls.certresolver=le"
+      - "traefik.http.middlewares.app-staging.headers.accesscontrolallowmethods=GET,POST,PUT,PATCH,DELETE,OPTIONS,HEAD"
+      - "traefik.http.middlewares.app-staging.headers.accesscontrolalloworiginlist=http://localhost:8100"
+      - "traefik.http.middlewares.app-staging.headers.accesscontrolmaxage=100"
+      - "traefik.http.middlewares.app-staging.headers.addvaryheader=true"
     environment:
       - RAILS_MASTER_KEY=$RAILS_MASTER_KEY
       - FRIENRADAR_DATABASE_STAGING_PASSWORD=$FRIENRADAR_DATABASE_STAGING_PASSWORD
