--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -44,6 +44,7 @@ services:
       - "traefik.http.middlewares.app-staging.headers.customresponseheaders.Access-Control-Allow-Headers=Content-Type,Authorization"
     environment:
       - RAILS_MASTER_KEY=$RAILS_MASTER_KEY
+      - RAILS_MASTER_KEY=$RAILS_MASTER_KEY
       - FRIENRADAR_DATABASE_STAGING_PASSWORD=$FRIENRADAR_DATABASE_STAGING_PASSWORD
       - FRIENRADAR_DATABASE_STAGING_USER=$FRIENRADAR_DATABASE_STAGING_USER
 
