--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -34,7 +34,9 @@ services:
       - postgres
       - redis
     environment:
+      # Fake secrets for development
       - RAILS_MASTER_KEY=1558120081078cc63f9a1a343d518894
+      - DEVISE_JWT_SECRET_KEY=5b6c7d8e9f0a1b2c3d4e5f6a7b8c9d0e
 
 volumes:
   redis:
