--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -43,7 +43,7 @@ services:
       - "traefik.http.middlewares.app-staging.headers.addvaryheader=true"
     environment:
       - RAILS_MASTER_KEY=$RAILS_MASTER_KEY
-      - RAILS_MASTER_KEY=$RAILS_MASTER_KEY
+      - DEVISE_JWT_SECRET_KEY=$DEVISE_JWT_SECRET_KEY
       - FRIENRADAR_DATABASE_STAGING_PASSWORD=$FRIENRADAR_DATABASE_STAGING_PASSWORD
       - FRIENRADAR_DATABASE_STAGING_USER=$FRIENRADAR_DATABASE_STAGING_USER
 
