--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -46,6 +46,7 @@ services:
       - DEVISE_JWT_SECRET_KEY=$DEVISE_JWT_SECRET_KEY
       - FRIENRADAR_DATABASE_STAGING_PASSWORD=$FRIENRADAR_DATABASE_STAGING_PASSWORD
       - FRIENRADAR_DATABASE_STAGING_USER=$FRIENRADAR_DATABASE_STAGING_USER
+      - REDIS_URL_STAGING=$REDIS_URL_STAGING
 
 volumes:
   redis:
