--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ test:
 
 production:
   <<: *default
-  database: Frienradar-backend_production
-  username: frienradar
-  password: <%= ENV['FRIENRADAR_DATABASE_PASSWORD'] %>
+  database: frienradar_production
+  username: <%= ENV['FRIENRADAR_DATABASE_PRODUCTION_USER'] %>
+  password: <%= ENV['FRIENRADAR_DATABASE_PRODUCTION_PASSWORD'] %>
 
