--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -37,6 +37,11 @@ services:
       # Fake secrets for development
       - RAILS_MASTER_KEY=1558120081078cc63f9a1a343d518894
       - DEVISE_JWT_SECRET_KEY=5b6c7d8e9f0a1b2c3d4e5f6a7b8c9d0e
+      - REDIS_URL=redis://redis:6379/0
+      - ALLOWED_REQUEST_ORIGINS=/http:\/\/*/, /https:\/\/*/
+      - ONESIGNAL_API_KEY=$ONESIGNAL_API_KEY
+      - ONESIGNAL_APP_ID=$ONESIGNAL_APP_ID
+      - ONESIGNAL_USER_KEY=$ONESIGNAL_USER_KEY
 
   mailcatcher:
     image: yappabe/mailcatcher
