--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -47,6 +47,7 @@ services:
       - RAILS_MASTER_KEY=$RAILS_MASTER_KEY
       - DEVISE_JWT_SECRET_KEY=$DEVISE_JWT_SECRET_KEY
       - DEEPLINK_HOST=$DEEPLINK_HOST
+      - RAILS_LOG_LEVEL=$RAILS_LOG_LEVEL
 
       # Database
       - FRIENRADAR_DATABASE_STAGING_PASSWORD=$FRIENRADAR_DATABASE_STAGING_PASSWORD
