Update wss config

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -62,6 +62,7 @@ services:
       - DEEPLINK_HOST=$DEEPLINK_HOST
       - RAILS_LOG_LEVEL=$RAILS_LOG_LEVEL
       - RAILS_APP_HOST=$RAILS_APP_HOST
+      - RAILS_APP_HOSTS=$RAILS_APP_HOSTS
 
       # Database
       - FRIENRADAR_DATABASE_PASSWORD=$FRIENRADAR_DATABASE_PASSWORD
