--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,7 +11,7 @@ aws_development:
 
 aws_production:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id_prod) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key_prod) %>
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: eu-central-1
   bucket: frienradar-prod
