--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -14,11 +14,11 @@ services:
     container_name: redis
     restart: always
     image: 'redis:5.0-alpine'
-    command: redis-server --port 6380
+    command: redis-server
     volumes:
       - redis:/data
     ports:
-      - "6370:6379"
+      - "6379:6379"
 
   app-staging:
     container_name: app-staging
